--- a/MunicipalServiceApp.csproj
+++ b/MunicipalServiceApp.csproj
@@ -53,6 +53,8 @@
     <Compile Include="DataStructures\BinarySearchTree.cs" />
     <Compile Include="DataStructures\AVLTree.cs" />
     <Compile Include="DataStructures\RedBlackTree.cs" />
+    <Compile Include="DataStructures\BinaryHeap.cs" />
+    <Compile Include="DataStructures\PriorityQueue.cs" />
     <Compile Include="EventStore.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -78,6 +80,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Repositories\IServiceRequestRepository.cs" />
     <Compile Include="Repositories\InMemoryServiceRequestRepository.cs" />
+    <Compile Include="Scheduling\IScheduler.cs" />
+    <Compile Include="Scheduling\RequestScheduler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReportIssuesForm.cs">
       <SubType>Form</SubType>
@@ -94,6 +98,7 @@
     <Compile Include="Tests\DataStructureTests.cs" />
     <Compile Include="Tests\ServiceRequestTests.cs" />
     <Compile Include="Tests\TreeStructureTests.cs" />
+    <Compile Include="Tests\HeapAndSchedulerTests.cs" />
     <EmbeddedResource Include="LocalEventsForm.resx">
       <DependentUpon>LocalEventsForm.cs</DependentUpon>
     </EmbeddedResource>
